Fix list overflow for swissen template
Based on there4/markdown-resume@ca2e1db; fixes the issue where list
items (such as those in the 'skills' section of sample.md) don't align
correctly if there's enough of them to wrap past the right margin. Also
fixes the width of those list items (there was wasted space on the right
before).

--- a/templates/swissen/css/pdf.css
+++ b/templates/swissen/css/pdf.css
@@ -52,7 +52,7 @@ body.pdf {
     }
 
     ul li {
-        width: 28%;
+        width: 33.33%;
         float: left;
     }
     ul dl {
