--- a/templates/swissen/css/resume.css
+++ b/templates/swissen/css/resume.css
@@ -109,6 +109,7 @@ ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    display: table;
 }
 ul li {
     margin: 0;
