--- a/templates/swissen/css/screen.css
+++ b/templates/swissen/css/screen.css
@@ -91,7 +91,7 @@
     }
     
     ul li {
-        width: 28%;
+        width: 33.33%;
         float: left;
     }
     ul dl {
